# zenmoney-importer

./: .gitignore  LICENSE  pyproject.toml
config/: config-example.yaml  config-test.yaml  config.yaml
src/: aggregator.py  dates.py  discovery.py  exporter.py  main.py  models.py  settings.py
src/adapters/: base.py  edenred.py  manual_placeholders.py  revolut_invest.py  tradernet.py
tests/: conftest.py  test_aggregator.py  test_dates.py  test_discovery.py  test_edenred_adapter.py  test_exporter.py  test_manual_placeholders.py  test_revolut_invest_adapter.py  test_tradernet_adapter.py
tests/data/: edenred_sample.json  revolut_dividends_sample.xlsx  tradernet_operations_sample.xlsx
